# rsi

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/splits/: filesystem-easy.json  filesystem-standard.json  postgres-easy.json  postgres-standard.json
data/benchmarks/: mcpmark.json
data/datasources/: Toucan.json
data/patches/: fs-pathfix.json  fs-pathfix2.json
data/rubrics/: filesystem__desktop_template__budget_computation.json  filesystem__legal_document__individual_comments.json  filesystem__legal_document__solution_tracing.json  filesystem__papers__author_folders.json  filesystem__papers__organize_legacy_papers.json
data/specs/: Toucan.json
scripts/: serve_checkpoint.sh
src/ouroboros/: __init__.py  agent.py  cli.py  config.py  evalharness.py  repro.py  rollout.py  schema.py  splits.py  store.py  verify.py
src/ouroboros/improve/: __init__.py  analyze.py  hf_traj.py  ouro_patch.py  patch_gen.py  review.py
src/ouroboros/onboard/: __init__.py  adapters.py  data_adapter.py  inventory.py  llm_explore.py  orchestrator.py  reproduce.py  spec.py  steps.py
src/ouroboros/verify/: __init__.py  autoverify.py  judge.py  rubric.py  trajectory_view.py
tests/: test_smoke.py
