[project]
name = "ouroboros"
version = "0.0.1"
description = "Recursive Self-Improvement (RSI) foundation for agentic models"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # rollout reuses hermes-agent; verifier reuses mcpmark.
    # Wire as editable/path deps once their checkouts are located:
    # "hermes-agent @ file://../hermes-agent",
    # "mcpmark @ file://<path-to-mcpmark>",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
ouro = "ouroboros.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ouroboros"]

[tool.ruff]
line-length = 100
